--- a/content/manual/problems/mathematical-foundations.mdx
+++ b/content/manual/problems/mathematical-foundations.mdx
@@ -1,218 +1,218 @@
 # Foundations of Mathematical Lawhood
 
-## Mathematics is not “whatever is consistent.”
+## Mathematics is not whatever can be formalized. Mathematics is what survives closure.
 
-## Mathematics is what **survives closure** and you can formalize that.
+Foundational debates usually start in the wrong place. They argue about *ontology* (objects vs. tools) or about *syntax* (what can be proved in a chosen axiom system), while ignoring the structural fact that dominates real mathematical practice:
 
-Most foundational talk about mathematics stalls because it argues about *ontology* (objects vs tools) while ignoring the thing mathematicians actually rely on every day:
+* the same content reappears across radically different presentations,
+* some statements remain stable under weakening and perturbation while others collapse,
+* canonical constructions recur across domains with near-mechanical inevitability.
 
-* invariance under re-presentation,
-* robustness under weakening,
-* and canonical completion.
+This problem page states a hard criterion for **mathematical lawhood**: what qualifies a structure as *mathematically real* (in the only sense that matters operationally) rather than a contingent artifact of encoding, axiom choice, or fragile scaffolding.
 
-This page states a hard criterion for *mathematical lawhood* not a philosophy, not a new axiom system, not a proof engine.
-
-> **A mathematical structure is law-level if and only if it is a fixed point of a three-stage admissibility operator.**
-
-That operator is the math-sector instantiation of the Tier-0 admissibility recursion.
+The criterion is a fixed-point admissibility condition: mathematical reality is the closure-stable residue under a three-stage operator pipeline. This is the mathematics-sector instantiation of the Tier-0 admissibility recursion for lawhood.  
 
 ---
 
-## 1) The lawhood criterion (mathematics-sector Everything Equation)
+## 1. The lawhood criterion
 
-In physics, Tier-0 writes lawhood as a fixed-point condition:  
-L = Omega(Delta(partial(L))) and interprets the operators as boundary normalization, persistence or records, and closure completion.
+At the law level, Tier-0 defines admissible law objects as fixed points of the recursion
+$$
+\mathcal{L} ;=; \Omega,\Delta,\partial(\mathcal{L}),
+$$
+where $\partial$ is boundary normalization, $\Delta$ is persistence selection, and $\Omega$ is global closure completion. 
 
-In mathematics, the same architecture applies, but with a different meaning of “persistence” (inferential, not thermodynamic):
+Mathematics inherits the same operator roles, but with a critical change: persistence is not physical irreversibility or record formation. It is **inferential persistence**: survival under proof environments, weakening, admissible perturbations, and re-expression. 
 
-**Mathematical lawhood** is defined by:
+The mathematics-sector lawhood criterion is therefore:
 
-**M is lawful if and only if**  
-M = OmegaM(DeltaM(partialM(M))).
+> A mathematical structure is lawful if and only if it is a fixed point of the composite admissibility map.
 
-This is not rhetorical. It becomes formal once we specify:
+Formally, there exist operators $\partial_{\mathsf{M}}$, $\Delta_{\mathsf{M}}$, and $\Omega_{\mathsf{M}}$ such that
+$$
+M ;=; \Omega_{\mathsf{M}},\Delta_{\mathsf{M}},\partial_{\mathsf{M}}(M).
+$$
 
-* the carrier domain of candidates,
-* the admissible re-presentations,
-* and the three operators as monotone maps.
 
----
-
-## 2) The carrier: put “candidate mathematics” in a lattice
-
-You need a place for the operator to act.
-
-The mathematics paper chooses a complete lattice (M, leq) as the carrier, with examples like:
-
-* a lattice of theories ordered by strength (theorem inclusion),
-* or a lattice of structure classes ordered by refinement.
-
-Completeness is not decoration. It lets fixed-point theorems fire.
-
-Think: a “candidate law object” is not a single sentence. It’s an element of the carrier that can be normalized, collapsed, and completed.
+This is not a metaphor. The papers make this precise by placing candidates into a complete lattice and requiring operator monotonicity, so fixed points exist by Knaster–Tarski. 
 
 ---
 
-## 3) Admissible re-presentation: quotient the scaffolding
+## 2. The carrier: where mathematical candidates live
 
-Mathematics constantly re-encodes the same structure:
+To define “admissibility” without committing to a single foundational school, the framework chooses a carrier domain that is mathematically universal:
 
-* set-theoretic vs categorical vs type-theoretic,
-* coordinate vs coordinate-free,
+* a **complete lattice** $(\mathsf{M},\le)$ of candidate mathematical law objects.
+
+The canonical example is a lattice of theories ordered by inclusion of theorem sets (or, equivalently, logical strength); alternative carriers include lattices of structure classes ordered by refinement. 
+
+The completeness requirement is not style; it is what makes fixed-point existence non-negotiable:
+a monotone endomap on a complete lattice has fixed points. 
+
+---
+
+## 3. Admissible re-presentation: quotient the scaffolding
+
+Mathematics constantly re-encodes the same content:
+
 * definitional expansions and eliminations,
-* Morita equivalence / bi-interpretability / “same content, different clothing.”
+* translation between set-theoretic, categorical, and type-theoretic presentations,
+* equivalences like definitional equivalence, bi-interpretability, and Morita equivalence (depending on the carrier).
 
-The framework treats that as a formal equivalence relation (“equivalent-to”) or a designated class of morphisms, and requires normalization to respect it.
+The framework treats these as **admissible re-presentations**, modelled by an equivalence relation (or an admissible class of morphisms) that captures “same content, different clothing.” 
 
-If your “truth” changes under admissible re-presentation, it’s not law-level.
+A structure that changes under admissible re-presentation is not law-level. That is not a judgment; it is a failure of the $\partial_{\mathsf{M}}$ requirement.
 
 ---
 
-## 4) The three operators (with formal axioms)
+## 4. The operators: formal axioms, not vibes
 
-This is where it stops being philosophy.
+The mathematics paper makes the operators explicit as monotone, idempotent endomaps on the carrier lattice, each with a distinct semantic role. 
 
-The mathematics paper gives a minimal axiom block for the operators partialM, DeltaM, OmegaM as endomaps on the complete lattice, each required to be monotone and idempotent, with roles pinned to what mathematicians already recognize.
+### 4.1 Boundary normalization $\partial_{\mathsf{M}}$
 
-### 4.1 partialM = boundary normalization (representation independence)
+$\partial_{\mathsf{M}}$ enforces representation-independence: it canonicalizes a candidate up to admissible re-presentation.
 
-Axioms (informal but exact role):
-
-* monotone,
-* idempotent,
-* extensive (pushes into a canonical normal form),
-* invariant under admissible re-presentation.
-
-Interpretation: partialM removes representational artifacts.
-
-### 4.2 DeltaM = persistence collapse (inferential robustness)
-
-Axioms:
+It is required to be:
 
 * monotone,
 * idempotent,
-* intensive (extracts a core),
-* “robust-core” condition: DeltaM(A) is maximal among subobjects of A stable under the chosen perturbation class (weakening, conservative extension or reduction, admissible axiom variation).
+* extensive (normal-form completion),
+* invariant under admissible equivalence. 
 
-Interpretation: DeltaM deletes scaffolding that doesn’t survive stress.
+Interpretation: $\partial_{\mathsf{M}}$ deletes presentation artifacts and fixes what counts as a legitimate representation of “the same object.”
 
-This is exactly how independence and fragility are reclassified: not “mysterious,” but “fails robustness.”
+### 4.2 Robustness collapse $\Delta_{\mathsf{M}}$
 
-### 4.3 OmegaM = closure completion (canonical inevitability)
+$\Delta_{\mathsf{M}}$ extracts the inferentially persistent core.
 
-Axioms:
+It is required to be:
+
+* monotone,
+* idempotent,
+* intensive (core extraction),
+* maximal among subobjects invariant under an explicitly chosen perturbation class (weakening, conservative extension/reduction, admissible axiom variation). 
+
+Interpretation: $\Delta_{\mathsf{M}}$ deletes scaffolding that fails under structural stress. Independence and axiom sensitivity become a precise diagnostic: a statement fails $\Delta_{\mathsf{M}}$-robustness under the chosen perturbation class, hence cannot be elevated to law-level structure. 
+
+### 4.3 Closure completion $\Omega_{\mathsf{M}}$
+
+$\Omega_{\mathsf{M}}$ enforces canonical completion: closure under admissible morphisms and constructions, minimal among closed supersets.
+
+It is required to be:
 
 * monotone,
 * idempotent,
 * extensive,
-* minimal closure under admissible constructions or morphisms (reflective hulls, canonical completions, etc.).
+* minimal admissible closure. 
 
-Interpretation: OmegaM forces canonical completion and reappearance.
-
----
-
-## 5) The fixed point exists (this is the non-negotiable punchline)
-
-Once you have:
-
-* a complete lattice carrier,
-* monotone operators,
-* and the composite FM = OmegaM o DeltaM o partialM,
-
-you get fixed points by Knaster–Tarski.
-
-Formally:
-
-* Fix(FM) is nonempty and forms a complete lattice,
-* there is a least fixed point and a greatest fixed point.
-
-This is the decisive move: mathematical lawhood becomes a theorem-shaped property, not a metaphysical claim.
-
-You do not have to argue “does mathematics exist.”  
-You specify admissibility, and fixed points exist.
+Interpretation: $\Omega_{\mathsf{M}}$ formalizes the phenomenon that certain objects reappear canonically across domains (universal properties, completions, spectral constructions), not because humans prefer them, but because closure forces them.
 
 ---
 
-## 6) What counts as “mathematically real” here
+## 5. Fixed points exist (and this is the actual foundation)
 
-The mathematics paper defines structural reality as:
+Define the composite admissibility map
+$$
+F_{\mathsf{M}} ;:=; \Omega_{\mathsf{M}} \circ \Delta_{\mathsf{M}} \circ \partial_{\mathsf{M}}.
+$$
 
-* invariant under partialM,
-* robust under DeltaM,
-* stable under OmegaM,
-* i.e., a fixed point of FM.
 
-This yields a clean resolution of the fake dichotomy:
+If $\partial_{\mathsf{M}}$, $\Delta_{\mathsf{M}}$, and $\Omega_{\mathsf{M}}$ are monotone on a complete lattice, then $F_{\mathsf{M}}$ is monotone, and Knaster–Tarski yields:
 
-* not “objects in a Platonic realm,”
-* not “just formal symbols,”
-* but **closure-stable invariants**.
+* the fixed-point set $\mathrm{Fix}(F_{\mathsf{M}})$ is nonempty and forms a complete lattice,
+* $F_{\mathsf{M}}$ has a least fixed point and a greatest fixed point. 
 
-Mathematics is real as constraint because fixed points are forced by admissibility, not chosen by preference.
+This is the hard pivot:
 
----
+> Mathematical lawhood becomes a theorem-shaped property: “lawful” means “fixed point of an admissibility operator.”
 
-## 7) Lawhood vs. mere consistency: the classifier that foundations lacked
-
-This framework draws a hard boundary:
-
-### Law-level
-
-Structures that survive:
-
-* re-presentation invariance,
-* robustness collapse,
-* and closure completion.
-
-### Non-law-level (but possibly useful)
-
-Structures that fail any operator stage:
-
-* representation-dependent,
-* fragile under perturbation,
-* non-canonical under completion.
-
-This is exactly how independence phenomena are re-read:
-
-> Independence is not just “unprovable.”  
-> It is a structural signal of DeltaM-fragility under the chosen admissible perturbations.
+No metaphysical postulates are needed. No “true universe of sets” is required. Lawhood is a stability criterion.
 
 ---
 
-## 8) The physics interface: why math constrains physics
+## 6. Exact fixed-point convention: least vs greatest (you must choose)
 
-Tier-0’s physical paper makes the central separation:
+The framework makes a clean, explicit point: there is generally a **lattice** of admissible fixed points, not a single one. You must choose a convention depending on what you mean by “mathematics.” 
 
-* record-bearing vs record-silent structure,
-* admissibility via L = Omega Delta partial(L),
-* and selection as closure stability rather than model choice.
+Three admissibility conventions are recorded:
 
-The mathematics paper makes the corresponding claim:
+1. **Fixed-point realism:** take all fixed points $\mathrm{Fix}(F_{\mathsf{M}})$ as “mathematical reality.”
+2. **Minimal admissibility:** take the **least fixed point** $\mathrm{lfp}(F_{\mathsf{M}})$ as “the” lawful core.
+3. **Maximal closure:** take the **greatest fixed point** $\mathrm{gfp}(F_{\mathsf{M}})$ as “the” fully closed completion. 
 
-* physics is the subset of admissible structures that also satisfy energetic and boundary realization constraints,
-* mathematics is admissible structure without that empirical anchoring requirement.
-
-So “why is math effective in physics” is no longer mysterious:
-
-> Both are filtered by the same closure architecture.  
-> Physics inherits the closure-stable part of mathematics because both are fixed points (with different operator instantiations).
+This program’s default stance is **minimal admissibility**: lawhood means the smallest closure-stable residue forced by admissibility, not an arbitrary maximal completion.
 
 ---
 
-## 9) The failure modes are explicit (this is what makes it referee-robust)
+## 7. What this resolves (structurally, not rhetorically)
 
-If something “isn’t law-level,” the framework doesn’t handwave it away. It classifies how it fails:
+This framework reclassifies the main foundational phenomena by operator failure modes:
 
-* partialM failure: presentation dependence,
-* DeltaM failure: fragility under perturbation or no robust core,
-* OmegaM failure: limit or refinement instability, non-canonical completion.
+* **presentation dependence** is $\partial_{\mathsf{M}}$-failure,
+* **independence/fragility under admissible perturbation** is $\Delta_{\mathsf{M}}$-failure,
+* **non-canonical or limit-unstable constructions** are $\Omega_{\mathsf{M}}$-failure. 
 
-That is the right kind of hardness: it turns foundational disputes into checklists.
+This is why the object/tool debate collapses: it was trying to assign ontology to presentation. Here, “real” means “closure-stable,” full stop. 
 
 ---
 
-### Summary in one line
+## 8. Why mathematics constrains physics
 
-**Mathematical lawhood = least fixed point of normalization, robustness collapse, and closure completion, on a complete lattice of candidates, modulo admissible re-presentation.**
+Tier-0’s physical core states lawhood as
+$$
+\mathcal{L} ;=; \Omega,\Delta,\partial(\mathcal{L}),
+$$
+and treats $\Delta$ as record-bearing persistence, with a sharp distinction between record-bearing and record-silent structure. 
 
-Everything else is scaffolding.
+The mathematics paper gives the interface principle: physics is the subset of admissible mathematical fixed points that also satisfy energetic and boundary realization constraints; mathematics is the closure-stable informational sector without those empirical anchors. 
+
+So Wigner’s “unreasonable effectiveness” is not mysterious here:
+
+* mathematics and physics are filtered by the same closure architecture,
+* physics inherits the most closure-stable mathematics because both are fixed points (with different operator instantiations). 
+
+---
+
+## 9. Operator Spec Sheet (compact)
+
+This is the minimum “audit form” needed to instantiate the framework in any foundational programme.
+
+### Carrier choice
+
+Pick a complete lattice $(\mathsf{M},\le)$ of candidates (theories by strength, structures by refinement, etc.). 
+
+### Admissible equivalence
+
+Specify an admissible re-presentation relation $\sim$ (definitional equivalence, bi-interpretability, Morita equivalence, etc.). 
+
+### Perturbation class for $\Delta_{\mathsf{M}}$
+
+Explicitly choose what counts as “admissible perturbation,” e.g. conservative weakening, conservative extension/reduction, axiom variation within a tolerance class. 
+
+### Closure class for $\Omega_{\mathsf{M}}$
+
+Explicitly choose what completion means: closure under admissible morphisms, reflective hulls, canonical completions, universal-property closures. 
+
+### Fixed-point convention
+
+Choose one:
+
+* $\mathrm{Fix}(F_{\mathsf{M}})$ (all fixed points),
+* $\mathrm{lfp}(F_{\mathsf{M}})$ (minimal admissibility),
+* $\mathrm{gfp}(F_{\mathsf{M}})$ (maximal closure). 
+
+---
+
+## 10. Scope boundary (what this page does not claim)
+
+This is not:
+
+* a new axiom system,
+* a proof engine for open problems,
+* a claim of computability of fixed points,
+* a replacement for ZFC, HoTT, category theory, or proof theory.
+
+It is a law-level classifier: a criterion for what can count as *mathematically real* (closure-stable), and why independence, fragility, and reappearance have a structural explanation. 
+
+---
