--- a/content/manual/problems/mathematical-foundations.mdx
+++ b/content/manual/problems/mathematical-foundations.mdx
@@ -6,11 +6,11 @@ Foundational debates usually start in the wrong place. They argue about *ontolog
 
 * the same content reappears across radically different presentations,
 * some statements remain stable under weakening and perturbation while others collapse,
-* canonical constructions recur across domains with near-mechanical inevitability.
+* canonical constructions recur across domains with near mechanical inevitability.
 
-This problem page states a hard criterion for **mathematical lawhood**: what qualifies a structure as *mathematically real* (in the only sense that matters operationally) rather than a contingent artifact of encoding, axiom choice, or fragile scaffolding.
+This problem page states a hard criterion for mathematical lawhood: what qualifies a structure as *mathematically real* (in the only sense that matters operationally) rather than a contingent artifact of encoding, axiom choice, or fragile scaffolding.
 
-The criterion is a fixed-point admissibility condition: mathematical reality is the closure-stable residue under a three-stage operator pipeline. This is the mathematics-sector instantiation of the Tier-0 admissibility recursion for lawhood.  
+The criterion is a fixed point admissibility condition: mathematical reality is the closure stable residue under a three stage operator pipeline. This is the mathematics sector instantiation of the Tier-0 admissibility recursion for lawhood.  
 
 ---
 
@@ -22,9 +22,9 @@ $$
 $$
 where $\partial$ is boundary normalization, $\Delta$ is persistence selection, and $\Omega$ is global closure completion. 
 
-Mathematics inherits the same operator roles, but with a critical change: persistence is not physical irreversibility or record formation. It is **inferential persistence**: survival under proof environments, weakening, admissible perturbations, and re-expression. 
+Mathematics inherits the same operator roles, but with a critical change: persistence is not physical irreversibility or record formation. It is inferential persistence: survival under proof environments, weakening, admissible perturbations, and re-expression. 
 
-The mathematics-sector lawhood criterion is therefore:
+The mathematics sector lawhood criterion is therefore:
 
 > A mathematical structure is lawful if and only if it is a fixed point of the composite admissibility map.
 
@@ -46,7 +46,7 @@ To define “admissibility” without committing to a single foundational school
 
 The canonical example is a lattice of theories ordered by inclusion of theorem sets (or, equivalently, logical strength); alternative carriers include lattices of structure classes ordered by refinement. 
 
-The completeness requirement is not style; it is what makes fixed-point existence non-negotiable:
+The completeness requirement is not style; it is what makes fixed point existence non negotiable:
 a monotone endomap on a complete lattice has fixed points. 
 
 ---
@@ -59,9 +59,9 @@ Mathematics constantly re-encodes the same content:
 * translation between set-theoretic, categorical, and type-theoretic presentations,
 * equivalences like definitional equivalence, bi-interpretability, and Morita equivalence (depending on the carrier).
 
-The framework treats these as **admissible re-presentations**, modelled by an equivalence relation (or an admissible class of morphisms) that captures “same content, different clothing.” 
+The framework treats these as admissible re-presentations, modelled by an equivalence relation (or an admissible class of morphisms) that captures “same content, different clothing.” 
 
-A structure that changes under admissible re-presentation is not law-level. That is not a judgment; it is a failure of the $\partial_{\mathsf{M}}$ requirement.
+A structure that changes under admissible re-presentation is not law level. That is not a judgment; it is a failure of the $\partial_{\mathsf{M}}$ requirement.
 
 ---
 
@@ -120,28 +120,28 @@ $$
 
 If $\partial_{\mathsf{M}}$, $\Delta_{\mathsf{M}}$, and $\Omega_{\mathsf{M}}$ are monotone on a complete lattice, then $F_{\mathsf{M}}$ is monotone, and Knaster–Tarski yields:
 
-* the fixed-point set $\mathrm{Fix}(F_{\mathsf{M}})$ is nonempty and forms a complete lattice,
+* the fixed point set $\mathrm{Fix}(F_{\mathsf{M}})$ is nonempty and forms a complete lattice,
 * $F_{\mathsf{M}}$ has a least fixed point and a greatest fixed point. 
 
 This is the hard pivot:
 
-> Mathematical lawhood becomes a theorem-shaped property: “lawful” means “fixed point of an admissibility operator.”
+> Mathematical lawhood becomes a theorem shaped property: “lawful” means “fixed point of an admissibility operator.”
 
 No metaphysical postulates are needed. No “true universe of sets” is required. Lawhood is a stability criterion.
 
 ---
 
-## 6. Exact fixed-point convention: least vs greatest (you must choose)
+## 6. Exact fixed point convention: least vs greatest (you must choose)
 
-The framework makes a clean, explicit point: there is generally a **lattice** of admissible fixed points, not a single one. You must choose a convention depending on what you mean by “mathematics.” 
+The framework makes a clean, explicit point: there is generally a lattice of admissible fixed points, not a single one. You must choose a convention depending on what you mean by “mathematics.” 
 
 Three admissibility conventions are recorded:
 
-1. **Fixed-point realism:** take all fixed points $\mathrm{Fix}(F_{\mathsf{M}})$ as “mathematical reality.”
+1. **Fixed point realism:** take all fixed points $\mathrm{Fix}(F_{\mathsf{M}})$ as “mathematical reality.”
 2. **Minimal admissibility:** take the **least fixed point** $\mathrm{lfp}(F_{\mathsf{M}})$ as “the” lawful core.
 3. **Maximal closure:** take the **greatest fixed point** $\mathrm{gfp}(F_{\mathsf{M}})$ as “the” fully closed completion. 
 
-This program’s default stance is **minimal admissibility**: lawhood means the smallest closure-stable residue forced by admissibility, not an arbitrary maximal completion.
+This program’s default stance is minimal admissibility: lawhood means the smallest closure stable residue forced by admissibility, not an arbitrary maximal completion.
 
 ---
 
@@ -151,9 +151,9 @@ This framework reclassifies the main foundational phenomena by operator failure 
 
 * **presentation dependence** is $\partial_{\mathsf{M}}$-failure,
 * **independence/fragility under admissible perturbation** is $\Delta_{\mathsf{M}}$-failure,
-* **non-canonical or limit-unstable constructions** are $\Omega_{\mathsf{M}}$-failure. 
+* **non-canonical or limit unstable constructions** are $\Omega_{\mathsf{M}}$-failure. 
 
-This is why the object/tool debate collapses: it was trying to assign ontology to presentation. Here, “real” means “closure-stable,” full stop. 
+This is why the object/tool debate collapses: it was trying to assign ontology to presentation. Here, “real” means “closure stable,” full stop. 
 
 ---
 
@@ -163,14 +163,14 @@ Tier-0’s physical core states lawhood as
 $$
 \mathcal{L} ;=; \Omega,\Delta,\partial(\mathcal{L}),
 $$
-and treats $\Delta$ as record-bearing persistence, with a sharp distinction between record-bearing and record-silent structure. 
+and treats $\Delta$ as record bearing persistence, with a sharp distinction between record-bearing and record-silent structure. 
 
-The mathematics paper gives the interface principle: physics is the subset of admissible mathematical fixed points that also satisfy energetic and boundary realization constraints; mathematics is the closure-stable informational sector without those empirical anchors. 
+The mathematics paper gives the interface principle: physics is the subset of admissible mathematical fixed points that also satisfy energetic and boundary realization constraints; mathematics is the closure stable informational sector without those empirical anchors. 
 
 So Wigner’s “unreasonable effectiveness” is not mysterious here:
 
 * mathematics and physics are filtered by the same closure architecture,
-* physics inherits the most closure-stable mathematics because both are fixed points (with different operator instantiations). 
+* physics inherits the most closure stable mathematics because both are fixed points (with different operator instantiations). 
 
 ---
 
@@ -192,9 +192,9 @@ Explicitly choose what counts as “admissible perturbation,” e.g. conservativ
 
 ### Closure class for $\Omega_{\mathsf{M}}$
 
-Explicitly choose what completion means: closure under admissible morphisms, reflective hulls, canonical completions, universal-property closures. 
+Explicitly choose what completion means: closure under admissible morphisms, reflective hulls, canonical completions, universal property closures. 
 
-### Fixed-point convention
+### Fixed point convention
 
 Choose one:
 
@@ -213,6 +213,6 @@ This is not:
 * a claim of computability of fixed points,
 * a replacement for ZFC, HoTT, category theory, or proof theory.
 
-It is a law-level classifier: a criterion for what can count as *mathematically real* (closure-stable), and why independence, fragility, and reappearance have a structural explanation. 
+It is a law level classifier: a criterion for what can count as *mathematically real* (closure stable), and why independence, fragility, and reappearance have a structural explanation. 
 
 ---
