--- a/content/manual/problems/mathematical-foundations.mdx
+++ b/content/manual/problems/mathematical-foundations.mdx
@@ -110,7 +110,7 @@ Interpretation: $\Omega_{\mathsf{M}}$ formalizes the phenomenon that certain obj
 
 ---
 
-## 5. Fixed points exist (and this is the actual foundation)
+## 5. Fixed points exist 
 
 Define the composite admissibility map
 $$
@@ -131,7 +131,7 @@ No metaphysical postulates are needed. No “true universe of sets” is require
 
 ---
 
-## 6. Exact fixed point convention: least vs greatest (you must choose)
+## 6. Exact fixed point convention: least vs greatest 
 
 The framework makes a clean, explicit point: there is generally a lattice of admissible fixed points, not a single one. You must choose a convention depending on what you mean by “mathematics.” 
 
@@ -145,7 +145,7 @@ This program’s default stance is minimal admissibility: lawhood means the smal
 
 ---
 
-## 7. What this resolves (structurally, not rhetorically)
+## 7. What this resolves 
 
 This framework reclassifies the main foundational phenomena by operator failure modes:
 
@@ -174,7 +174,7 @@ So Wigner’s “unreasonable effectiveness” is not mysterious here:
 
 ---
 
-## 9. Operator Spec Sheet (compact)
+## 9. Operator Spec Sheet 
 
 This is the minimum “audit form” needed to instantiate the framework in any foundational programme.
 
