--- a/content/manual/problems/lawhood.mdx
+++ b/content/manual/problems/lawhood.mdx
@@ -12,7 +12,7 @@ This problem page answers the upstream question your usual toolchain does not ev
 
 The core criterion is the Everything Equation:
 $$
-\mathcal{L} ;=; \Omega,\Delta,\partial(\mathcal{L}).
+\mathcal{L} = \Omega \Delta \partial(\mathcal{L})
 $$
  
 
