--- a/content/manual/problems/lawhood.mdx
+++ b/content/manual/problems/lawhood.mdx
@@ -165,7 +165,7 @@ $$
 \partial_{\mathrm{phys}}
 \bigl(
 \mathcal{L}_{\mathrm{phys}}
-\bigr),
+\bigr)
 $$
 and the fixed points correspond to physically meaningful stability classes (e.g., universality classes).
 
